Bug 355894 - Icon fade node does not take into account item opacity
Summary: Icon fade node does not take into account item opacity
Status: RESOLVED FIXED
Alias: None
Product: libplasma
Classification: Frameworks and Libraries
Component: libplasma (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Marco Martin
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-11-25 15:18 UTC by Kai Uwe Broulik
Modified: 2016-03-20 11:00 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2015-11-25 15:18:54 UTC
If you have an IconItem with an opacity other than 1 and the icon changes, during the transition the icon looks too bright. Could be that the fade node does not take into account the opacity and/or override the opacity node.

Reproducible: Always

Steps to Reproduce:
1. Place an IconItem somewhere with opacity 0.6
2. Change the icon (eg. on hover)
3.

Actual Results:  
The icon will look broken during the transition

Expected Results:  
The icon looks fine during the transition
Comment 1 Kai Uwe Broulik 2016-03-20 10:33:59 UTC
Git commit 92e2c07adfd75f1f9e5a4a0bc592c9799ba20867 by Kai Uwe Broulik.
Committed on 20/03/2016 at 10:33.
Pushed by broulik into branch 'master'.

[Fading Node] Don't mix opacity separately

This breaks icon item fading when its opacity is smaller than 1 as can be observed
in the "Leave" dialog.
REVIEW: 127427

M  +1    -2    src/declarativeimports/core/fadingnode.cpp

http://commits.kde.org/plasma-framework/92e2c07adfd75f1f9e5a4a0bc592c9799ba20867
Comment 2 Kai Uwe Broulik 2016-03-20 11:00:28 UTC
Git commit 92e2c07adfd75f1f9e5a4a0bc592c9799ba20867 by Kai Uwe Broulik.
Committed on 20/03/2016 at 10:33.
Pushed by broulik into branch 'master'.

[Fading Node] Don't mix opacity separately

This breaks icon item fading when its opacity is smaller than 1 as can be observed
in the "Leave" dialog.
REVIEW: 127427

M  +1    -2    src/declarativeimports/core/fadingnode.cpp

http://commits.kde.org/plasma-framework/92e2c07adfd75f1f9e5a4a0bc592c9799ba20867